<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.praveenbhati.agrovision.MainActivity">

    <item android:id="@+id/action_addlead"
        android:title="@string/action_addlead"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_white_36dp"/>
    <item android:id="@+id/action_appoint"
        android:title="@string/action_appoint"
        app:showAsAction="never" />

    <!--<item android:id="@+id/action_database"
        android:title="@string/action_database"
        app:showAsAction="never" />
-->
    <item android:id="@+id/action_expense"
        android:title="@string/action_expense"
        app:showAsAction="never" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />


</menu>
